kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-app
  namespace: bookapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-app
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
      - name: book-app
        image: jovanoskajovana/book-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
