kubernetes/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: bookapp-namespace
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
